fix: table header behind pagination active item
The Pagination active item is displayed on top of the EpicTable fixed
header if you scroll down.

Increased epic table fixed header z-index to be displayed on top of
pagination active item.

--- a/src/table/EpicTable/EpicTable.scss
+++ b/src/table/EpicTable/EpicTable.scss
@@ -32,7 +32,7 @@
   &-fixed-header {
     position: fixed;
     overflow: hidden;
-    z-index: 2;
+    z-index: 4;
     top: 0;
   }
 
